# quantized-sssm

./: .gitignore  README.md  plan.md  pyproject.toml
configs/: eval.yaml  longctx.yaml  model.yaml  profile.yaml
scripts/: eval_lm_harness.sh  eval_long_context.py  eval_ppl.py  profile.py
src/: __init__.py  config.py  load.py  logging.py  metrics_longctx.py  metrics_ppl.py  profiling.py
src/utils/: __init__.py  determinism.py  timing.py
